--- a/bin/install
+++ b/bin/install
@@ -4,29 +4,41 @@ set -e
 set -o pipefail
 
 install_browsers() {
-  local playwright_version=$1
-  local data_sha256=$2
+  local install_type=$1
+  local playwright_version=$2
   local install_path=$3
   local browser_revs_url="https://raw.githubusercontent.com/microsoft/playwright/v${playwright_version}/packages/playwright-core/browsers.json"
-  local operating_system="$(uname | tr '[:upper:]' '[:lower:]')"
+
+  if [ "Linux" = "$(uname)" ]; then
+    local operating_system="linux"
+  else
+    local operating_system="mac"
+  fi
+
   local arch="$(getArch)"
+  local platform="$operating_system-$arch"
+
   local platform="$operating_system-$arch"
 
   local browser_revs_file=$(mktemp)
   echo "Downloading browsers.json from ${browser_revs_url} to ${browser_revs_file}"
-  curl --retry 10 --retry-delay 2 -Lo $browser_revs_file $browser_revs_url
+  curl --retry 10 --verbose --retry-delay 2 -Lo $browser_revs_file $browser_revs_url
 
   local browser_revs=$(jq -r '.browsers | to_entries | map("\(.key)=\(.value)") | join(" ")' $browser_revs_file)
 
-  for browser_rev in $browser_revs; do
-    local browser=$(echo $browser_rev | cut -d '=' -f 1)
-    local revision=$(echo $browser_rev | cut -d '=' -f 2)
+ # Loop through each browser object in the JSON array
+  for browser_obj in $(jq -c '.browsers[]' $browser_revs_file); do
+    # Extract name, revision, and browser version from the object
+    local browser=$(jq -r '.name' <<< "$browser_obj")
+    local revision=$(jq -r '.revision' <<< "$browser_obj")
+    local browser_version=$(jq -r '.browserVersion' <<< "$browser_obj")
 
-    local download_url="https://example.com/path/to/$browser/$revision"
+    # https://playwright.azureedge.net/builds/chromium/1007/chromium-mac-arm64.zip
+    local download_url="https://playwright.azureedge.net/builds/$browser/$revision/$browser-$platform.zip"
     local download_path="$install_path/$browser-$revision.tar.gz"
 
     echo "Downloading $browser revision $revision from $download_url to $download_path"
-    curl --retry 10 --retry-delay 2 -Lo $download_path $download_url
+    curl --retry 10 --verbose --retry-delay 2 -Lo $download_path $download_url
 
     echo "Extracting $browser revision $revision to $install_path/$browser-$revision"
     tar -zxf $download_path --directory $install_path
@@ -54,4 +66,4 @@ getArch() {
   fi
 }
 
-install_browsers $ASDF_PLAYWRIGHT_VERSION $ASDF_DATA_SHA256 $ASDF_INSTALL_PATH
+install_browsers $ASDF_INSTALL_TYPE $ASDF_INSTALL_VERSION $ASDF_INSTALL_PATH
